[gd_scene load_steps=7 format=3 uid="uid://c67pkjqo1gdxt"]

[ext_resource type="FontFile" uid="uid://bhm2ik3ij1rpj" path="res://Assets/Fonts/public_pixel.otf" id="1_rckji"]
[ext_resource type="Script" path="res://Source/PauseMenuOLD/Options/OptionsMenuCell/options_menu_cell.gd" id="1_sh8tt"]

[sub_resource type="Animation" id="Animation_lkt6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mex7a"]
resource_name = "add"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5ow5k"]
resource_name = "remove"
length = 0.1
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2lf4"]
_data = {
"RESET": SubResource("Animation_lkt6r"),
"add": SubResource("Animation_mex7a"),
"remove": SubResource("Animation_5ow5k")
}

[node name="OptionsMenuCell" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(8, 18)
layout_mode = 3
anchors_preset = 0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 8.0
pivot_offset = Vector2(4, 9)
script = ExtResource("1_sh8tt")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rckji")
theme_override_font_sizes/font_size = 8
text = "TESTE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenuCell" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsMenuCell"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_rckji")
theme_override_font_sizes/font_size = 8
text = "<"

[node name="Label2" type="Label" parent="OptionsMenuCell"]
custom_minimum_size = Vector2(16, 8)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rckji")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="OptionsMenuCell"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_rckji")
theme_override_font_sizes/font_size = 8
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v2lf4")
}
